updated home page

--- a/cv.html
+++ b/cv.html
@@ -179,6 +179,7 @@
                 	<h3><a href="http://ala.org" target="_blank">American Library Association</a>
                 	</br>2012 - Present</h3>
                 	<ul>
+                		<li>Emerging Leaders Program, Class of 2016</li>
                 		<li>Association of College and Research Libraries</li>
                 			<ul>
                 				<li>ACRL Immersion Teacher Track, August 2015</li>
@@ -212,6 +213,19 @@
 						<li>Partnered with groups inside and outside of the school to plan meetings and events to encourage student networking and development</li>
 					</ul>
             	</div>
+        	</div> 
+ 			<div class="row">
+            	<div class="col-sm-9">
+                	<h3>Posters/Presentations</h3>
+                	<ul>
+                		<li>LITA Forum 2015, Lightning Talk:
+                			<ul><li><i><a href="https://goo.gl/GbEbTD" target="_blank">Immersive Education Using Virtual Reality</a></i></li></ul>
+						</li>
+                		<li>OK-ACRL Conference 2015, Poster:
+                			<ul><li><i><a href="images/OK-ACRL_Poster.png" target="_blank">An Exhibition Without Walls: Reimagining the Physical Exhibit in a Digital Realm</a></i></li></ul>
+						</li>					
+					</ul>
+            	</div>
         	</div>        	
     	</div>
       </div>
@@ -228,7 +242,7 @@
     <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
       <div class="panel-body">
     	<div class="container" id="content">
-        	
+        	Adobe Creative Suite, Tableau, Unity3D, Sierra ILS, Omeka, SpringShare Products (LibGuides, LibCal, etc.), OCLC Connexion, Audacity, myBalsamiq, FileMaker Pro, HTML/CSS, JavaScript, Bash (Unix Shell), Python, Git, SQLite, C#
     	</div>
       </div>
     </div>
