--- a/vis/QuakeMap.html
+++ b/vis/QuakeMap.html
@@ -69,28 +69,13 @@
                     </span> <span class="icon-bar">
                     </span> 
                 </button>
-                <a class="navbar-brand" href="../visualizations.html">Visualizations</a>
+                <a class="navbar-brand" href="../index.html">Home</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href="#">Mapping<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="QuakeMap.html">Earthquakes in Oklahoma</a></li>
-                            <li><a href="WeatherMap.html">Weather Map</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href="#">Library Stats<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="HCLCStats.html">HCLC Usage</a></li>
-                            <li><a href="rounds.html">HCLC Rounds</a></li>
-                            <li><a href="EIC.html">EIC Stats</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href="#">Other<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="refugees.html">Refugees 2014</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="../about.html">About</a></li>
+                    <li><a href="../cv.html">CV</a></li>
+                    <li><a href="../contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
