--- a/vis/la_crimes.html
+++ b/vis/la_crimes.html
@@ -20,12 +20,13 @@
                     </span> <span class="icon-bar">
                     </span> 
                 </button>
-                <a class="navbar-brand">Visualizations</a>
+                <a class="navbar-brand" href="../index.html">Home</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="la_crimes.html">LA Crimes 2014</a></li>
-                    <li><a href="nycsf2014.html">NYC Stop and Frisk 2014</a></li>
+                    <li><a href="../about.html">About</a></li>
+                    <li><a href="../cv.html">CV</a></li>
+                    <li><a href="../contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
